crates/stylex-shared/tests/evaluation/stylex_evaluation/import_evaluation/evaluation_of_imported_values_works_based_on_configuration/snapshots/fold__evaluation__stylex_evaluation__import_evaluation__evaluation_of_imported_values_works_based_on_configuration__theme_name_hashing_based_on_filename_alone_works__imported_vars_with_stylex_suffix_can_be_used_as_style_keys_dynamically.snap
---
source: crates/stylex-shared/tests/evaluation/stylex_evaluation/import_evaluation/evaluation_of_imported_values_works_based_on_configuration/theme_name_hashing_based_on_filename_alone_works.rs
expression: transformation
---
import _inject from "@stylexjs/stylex/lib/stylex-inject";
var _inject2 = _inject;
import "otherFile.stylex";
import stylex from 'stylex';
import { MyTheme } from 'otherFile.stylex';
_inject2({
    ltr: ".__hashed_var__1w8wjxo{--__hashed_var__1jqb1tb:var(--x---__hashed_var__1jqb1tb)}",
    priority: 1
});
_inject2({
    ltr: '@property --x---__hashed_var__1jqb1tb { syntax: "*"; inherits: false;}',
    priority: 0
});
export const styles = {
    color: (color)=>[
            {
                "--__hashed_var__1jqb1tb": color != null ? "__hashed_var__1w8wjxo" : color,
                $$css: true
            },
            {
                "--x---__hashed_var__1jqb1tb": color != null ? color : undefined
            }
        ]
};
stylex.props(styles.color('red'));
